--- a/box2d/Box2D/CMakeLists.txt
+++ b/box2d/Box2D/CMakeLists.txt
@@ -1,7 +1,19 @@
 cmake_minimum_required(VERSION 3.8)
 
 # https://cmake.org/cmake/help/latest/command/project.html
-project(box2d VERSION 2.4.1)
+project(box2d VERSION 2.4.1)# Detect clang
+
+if(CMAKE_CXX_COMPILER MATCHES ".*clang")
+  set(CMAKE_COMPILER_IS_CLANGXX 1)
+  # call find_package for Threads. Without this, you will get this error:
+  # set_target_properties Can not find target to add properties to: Threads::Threads
+  find_package(Threads)
+endif()
+if (WIN32)
+  find_package(Threads)
+endif()
+
+add_definitions( -DLIQUIDFUN_EXTERNAL_LANGUAGE_API=1 )
 
 # set(CMAKE_CONFIGURATION_TYPES "Debug;RelWithDebInfo" CACHE STRING "" FORCE)
 
