--- a/box2d/Box2D/CMakeLists.txt
+++ b/box2d/Box2D/CMakeLists.txt
@@ -20,7 +20,7 @@ add_definitions(-DLIQUIDFUN_EXTERNAL_LANGUAGE_API=0)
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN ON)
 
-option(BOX2D_BUILD_UNIT_TESTS "Build the Box2D unit tests" OFF)
+option(BOX2D_BUILD_UNIT_TESTS "Build the Box2D unit tests" ON)
 option(BOX2D_BUILD_TESTBED "Build the Box2D testbed" OFF)
 option(BOX2D_BUILD_DOCS "Build the Box2D documentation" OFF)
 option(BOX2D_USER_SETTINGS "Override Box2D settings with b2UserSettings.h" OFF)
@@ -78,4 +78,5 @@ install(
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
-message("copeied from ${CMAKE_CURRENT_SOURCE_DIR}/include/box2d to ${CMAKE_INSTALL_INCLUDEDIR}")
+message("Copied from ${CMAKE_CURRENT_SOURCE_DIR}/include/box2d to ${CMAKE_INSTALL_INCLUDEDIR}")
+
